--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8081
 
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/techbashvn?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username = root
+spring.datasource.password = root
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+
+spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.hibernate.ddl-auto = create
