--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8081
 
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+#dan ten database thay cho doan "techbasevn". tu dau ? tro di de dinh nghia ngon ngu viennamese
 spring.datasource.url = jdbc:mysql://localhost:3306/techbashvn?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username = root
 spring.datasource.password = root
